@@ -41,7 +41,7 @@ extern int apcs_32bit;
 extern int apcs_fpv3;
 extern int apcs_softfloat;
 extern int rma_module;
-extern int option_elf;
+extern int option_aof;
 
 extern const char *ProgName;
 
