@@ -36,8 +36,11 @@ TargetCPU_t targetCPU = UNKNOWN;
 static const char *targetName = "";
 
 
+/**
+ * Only called from main()
+ */
 int
-as_target (const char *target)	/* only called from main() */
+as_target (const char *target)
 {
   static const struct
     {
@@ -47,61 +50,20 @@ as_target (const char *target)	/* only called from main() */
     }
   cpu[] =
   {
-    {
-      "ARM2", ARM2, sizeof("ARM2")
-    }
-    ,
-    {
-      "ARM250", ARM250, sizeof("ARM250")
-    }
-    ,
-    {
-      "ARM3", ARM3, sizeof("ARM3")
-    }
-    ,
-    {
-      "ARM6", ARM6, sizeof("ARM6")
-    }
-    ,
-    {
-      "ARM7", ARM7, sizeof("ARM7")
-    }
-    ,
-    {
-      "ARM7M", ARM7M, sizeof("ARM7M")
-    }
-    ,
-    {
-      "ARM8", ARM8, sizeof("ARM8")
-    }
-    ,
-    {
-      "ARM9", ARM9, sizeof("ARM9")
-    }
-    ,
-    {
-      "SA1", SA1, sizeof("SA1")
-    }
-    ,
-    {
-      "SA110", SA1, sizeof("SA110")
-    }
-    ,
-    {
-      "STRONGARM", SA1, sizeof("STRONGARM")
-    }
-    ,
-    {
-      "ARM10", ARM10, sizeof("ARM10")
-    }
-    ,
-    {
-      "XSCALE", XSCALE, sizeof("XSCALE")
-    }
-    ,
-    {
-      NULL, UNKNOWN, 0
-    }
+    { "ARM2", ARM2, sizeof("ARM2") },
+    { "ARM250", ARM250, sizeof("ARM250") },
+    { "ARM3", ARM3, sizeof("ARM3") },
+    { "ARM6", ARM6, sizeof("ARM6") },
+    { "ARM7", ARM7, sizeof("ARM7") },
+    { "ARM7M", ARM7M, sizeof("ARM7M") },
+    { "ARM8", ARM8, sizeof("ARM8") },
+    { "ARM9", ARM9, sizeof("ARM9") },
+    { "SA1", SA1, sizeof("SA1") },
+    { "SA110", SA1, sizeof("SA110") },
+    { "STRONGARM", SA1, sizeof("STRONGARM") },
+    { "ARM10", ARM10, sizeof("ARM10") },
+    { "XSCALE", XSCALE, sizeof("XSCALE") },
+    { NULL, UNKNOWN, 0 }
   };
 
   int n;
@@ -141,7 +103,8 @@ cpuWarn (TargetCPU_t type)	/* true if warning is output */
   return TRUE;
 }
 
-void set_cpuvar (void)
+void
+set_cpuvar (void)
 {
    char buffer[40];
 
