@@ -1,3 +1,10 @@
+Sun Jan  4 15:46:16 CET 2009  John Tytgat  <John.Tytgat@aaug.net>
+
+	* symbol.c,code.c,symbol.h,code.h,decode.c,variables.c,value.c
+	value.h,output.c,m_fpumem.c,m_fpu.c,targetcpu.c,main.c,main.h:
+	Small code cleanups; have option_aof available instead of
+	option_elf and drop the latter completely.
+
 Sun Jan  4 15:31:53 CET 2009  John Tytgat  <John.Tytgat@aaug.net>
 
 	* reloc.c,reloc.h,output: Small code cleanup.
